// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuctionBadge renders closing state without icons or viewer count 1`] = `
<DocumentFragment>
  <div
    class="w-fit min-w-fit justify-center hui-text-body-secondary h-[24px] px-xs text-text-inverse rounded-sm bg-background-critical-dark hui-text-label-strong flex items-center gap-2xs"
    data-testid="auction-badge"
  >
    CLOSING
    <span />
  </div>
</DocumentFragment>
`;

exports[`AuctionBadge renders live state by default 1`] = `
<DocumentFragment>
  <div
    class="w-fit min-w-fit justify-center hui-text-body-secondary h-[24px] px-xs text-text-inverse rounded-sm bg-background-critical-dark hui-text-label-strong flex items-center gap-2xs"
    data-testid="auction-badge"
  >
    LIVE
    <svg
      aria-label="Dot Outline"
      class="-mx-2xs"
      fill="currentColor"
      height="20"
      style="min-height: 20px; min-width: 20px;"
      viewBox="0 0 256 256"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M156,128a28,28,0,1,1-28-28A28,28,0,0,1,156,128Z"
      />
    </svg>
    <span>
      100
    </span>
  </div>
</DocumentFragment>
`;

exports[`AuctionBadge renders live state with video and viewer count 1`] = `
<DocumentFragment>
  <div
    class="w-fit min-w-fit justify-center hui-text-body-secondary h-[24px] px-xs text-text-inverse rounded-sm bg-background-critical-dark hui-text-label-strong flex items-center gap-2xs"
    data-testid="auction-badge"
  >
    <svg
      aria-label="Video Camera"
      data-testid="video-camera-icon"
      fill="currentColor"
      height="20"
      style="min-height: 20px; min-width: 20px;"
      viewBox="0 0 256 256"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192,72V184a16,16,0,0,1-16,16H32a16,16,0,0,1-16-16V72A16,16,0,0,1,32,56H176A16,16,0,0,1,192,72Zm58,.25a8.23,8.23,0,0,0-6.63,1.22L209.78,95.86A4,4,0,0,0,208,99.19v57.62a4,4,0,0,0,1.78,3.33l33.78,22.52a8,8,0,0,0,8.58.19,8.33,8.33,0,0,0,3.86-7.17V80A8,8,0,0,0,250,72.25Z"
      />
    </svg>
    LIVE
    <svg
      aria-label="Dot Outline"
      class="-mx-2xs"
      fill="currentColor"
      height="20"
      style="min-height: 20px; min-width: 20px;"
      viewBox="0 0 256 256"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M156,128a28,28,0,1,1-28-28A28,28,0,0,1,156,128Z"
      />
    </svg>
    <span>
      500
    </span>
  </div>
</DocumentFragment>
`;

exports[`AuctionBadge renders paused state with pause icon 1`] = `
<DocumentFragment>
  <div
    class="w-fit min-w-fit justify-center hui-text-body-secondary h-[24px] px-xs text-text-inverse rounded-sm bg-background-critical-dark hui-text-label-strong flex items-center gap-2xs"
    data-testid="auction-badge"
  >
    <svg
      aria-label="Pause"
      data-testid="pause-icon"
      fill="currentColor"
      height="20"
      style="min-height: 20px; min-width: 20px;"
      viewBox="0 0 256 256"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M216,48V208a16,16,0,0,1-16,16H160a16,16,0,0,1-16-16V48a16,16,0,0,1,16-16h40A16,16,0,0,1,216,48ZM96,32H56A16,16,0,0,0,40,48V208a16,16,0,0,0,16,16H96a16,16,0,0,0,16-16V48A16,16,0,0,0,96,32Z"
      />
    </svg>
    PAUSED
    <svg
      aria-label="Dot Outline"
      class="-mx-2xs"
      fill="currentColor"
      height="20"
      style="min-height: 20px; min-width: 20px;"
      viewBox="0 0 256 256"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M156,128a28,28,0,1,1-28-28A28,28,0,0,1,156,128Z"
      />
    </svg>
    <span>
      100
    </span>
  </div>
</DocumentFragment>
`;

exports[`AuctionBadge renders with video icon when hasVideo is true 1`] = `
<DocumentFragment>
  <div
    class="w-fit min-w-fit justify-center hui-text-body-secondary h-[24px] px-xs text-text-inverse rounded-sm bg-background-critical-dark hui-text-label-strong flex items-center gap-2xs"
    data-testid="auction-badge"
  >
    <svg
      aria-label="Video Camera"
      data-testid="video-camera-icon"
      fill="currentColor"
      height="20"
      style="min-height: 20px; min-width: 20px;"
      viewBox="0 0 256 256"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192,72V184a16,16,0,0,1-16,16H32a16,16,0,0,1-16-16V72A16,16,0,0,1,32,56H176A16,16,0,0,1,192,72Zm58,.25a8.23,8.23,0,0,0-6.63,1.22L209.78,95.86A4,4,0,0,0,208,99.19v57.62a4,4,0,0,0,1.78,3.33l33.78,22.52a8,8,0,0,0,8.58.19,8.33,8.33,0,0,0,3.86-7.17V80A8,8,0,0,0,250,72.25Z"
      />
    </svg>
    LIVE
    <svg
      aria-label="Dot Outline"
      class="-mx-2xs"
      fill="currentColor"
      height="20"
      style="min-height: 20px; min-width: 20px;"
      viewBox="0 0 256 256"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M156,128a28,28,0,1,1-28-28A28,28,0,0,1,156,128Z"
      />
    </svg>
    <span>
      100
    </span>
  </div>
</DocumentFragment>
`;
